Specify button text color as black to fix bug on mobile screens

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -150,6 +150,7 @@
 
 		&__button {
 			padding: 0.375rem 0.625rem;
+			color: $primary-Black;
 			border: 1px solid $primary-Black;
 			background-color: $secondary-Blue;
 			font-weight: bold;
